--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,2 @@
-# OS junk
-desktop.ini
-Thumbs.db
-
-# Videos
-*.mp4
-*.mov
-*.avi
-
-# PDFs
-*.pdf
-
-# Vendor libs
-assets/vendor/
-
-# Source maps
-*.map
+# REMOVE this line
+# assets/vendor/
